test/features/errors/semantic/e1053_cannot_borrow_immutable.spl
# E1053: Cannot Borrow Immutable

Feature: E1053 - Cannot Borrow Immutable Value as Mutable
  As a Simple compiler
  I want to detect attempts to create mutable references to immutable values
  So that mutability rules are enforced

  Background:
    Given I have the Simple compiler

  Scenario: Mutable borrow of immutable value
    When I compile:
      '''
      fn modify(x: mut i32):
        x += 1

      fn test():
        val x = 42  # Immutable
        modify(mut x)  # Error: cannot borrow immutable as mutable
      '''
    Then I should see error E1053 at line 6
    And the error message should be "cannot create mutable reference to immutable value"
    And the label should indicate "immutable value"
    And the help should suggest "make the value mutable with `var` or `mut`"

  Scenario: Valid mutable borrow
    When I compile:
      '''
      fn modify(x: mut i32):
        x += 1

      fn test():
        var x = 42  # Mutable
        modify(mut x)  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn modify(x: mut i32):
        x += 1

      fn test():
        val x = 42
        modify(mut x)
      '''
    Then I should see error E1053
    And the error message should contain "불변 값 차용 불가"
